fix z-index

--- a/Web-36/src/Components/Home/Home.scss
+++ b/Web-36/src/Components/Home/Home.scss
@@ -1372,7 +1372,8 @@ body {
       max-width: 196px;
       width: 100%;
     }
-    .Necklet-features {
+    .Necklet-features,
+    #Necklet-features-home {
       z-index: 10;
       margin: 36px;
       display: flex;
